--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <title>Greenlight Casino</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poiret+One&display=swap">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Load Telegram Web App JS first -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <!-- Load improved loader script -->
+    <script src="js/loader.js"></script>
 </head>
 <body>
     <div class="app-container">
